# mcp-condenser

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  condenser.py  json_condenser.py  mcp_proxy.py  pyproject.toml
.github/workflows/: ci.yml  prerelease.yml  release.yml
benchmarks/: accuracy.py  fixtures.py  matrix.py
benchmarks/results/: accuracy_matrix.md  context_enablement.md  raw_results_pre_profiles.json  token_reduction.md
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
docs/: CONFIGURATION.md  ec2-tags-fix.md
examples/docker-compose/: README.md  config.json  docker-compose.multi.yml  docker-compose.yml
examples/helm/: README.md  helmfile.yaml  values-multi.yaml  values-single.yaml
helm/mcp-condenser/: Chart.yaml  values.yaml
helm/mcp-condenser/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
mcp_condenser/: __init__.py  condenser.py  config.py  metrics.py  parsers.py  proxy.py
scripts/: gen_db_fixture.py  gen_ec2_fixture.py
tests/: test_benchmark.py  test_condenser.py  test_config.py  test_heuristics.py  test_json_condenser.py  test_metrics.py  test_parsers.py  test_proxy.py
tests/fixtures/: app_performance.csv  aws_ec2_instances.json  db_query_results.json  deploy_inventory.xml  server_metrics.csv  tool_t1_i5.json  toolresult.json  toolresult2.json  toolresult2_small.json
