[project]
name = "mcp-condenser"
version = "0.3.0"
description = "MCP proxy that condenses verbose JSON tool responses into compact TOON text for LLM context compression"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "LogDNA" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.14.5",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "tiktoken>=0.12.0",
    "toon-format",
]

[project.urls]
Homepage = "https://github.com/logdna/mcp-condenser"
Repository = "https://github.com/logdna/mcp-condenser"

[project.scripts]
mcp-condenser = "mcp_condenser.condenser:main"
mcp-condenser-proxy = "mcp_condenser.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
generate = true

[tool.semantic_release.remote]
type = "github"

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
